<resources>
    <string name="app_name">Just Java</string>
    <string name="name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="whipping_cream">Whipping Cream</string>
    <string name="choclate">Choclate</string>
    <string name="quantity">Quantity</string>
    <string name="order">order</string>
    <string name="thank_you">Thank You</string>
    <string name="total">Total :</string>
    <string name="subject">Coffee Order</string>
</resources>
