<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/backgrounf_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/coff"

        />
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:hint="@string/name"/>
            <TextView
                android:id="@+id/topping"
                style="@style/HeaderTextStyle"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/toppings"
                />

            <CheckBox
                android:id="@+id/topping_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:paddingLeft="24dp"
                android:textSize="16sp"
                android:text="@string/whipping_cream"
                />

            <CheckBox
                android:id="@+id/choclate_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:textSize="16sp"
                android:text="@string/choclate"
                />


        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/HeaderTextStyle"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/quantity"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:orientation="horizontal">

            <Button

                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="8dp"
                android:onClick="decrement"
                android:text="-" />


            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="1"
                android:textColor="#000000"
                android:textSize="16sp" />


            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="16dp"
                android:onClick="increment"
                android:text="+" />
        </LinearLayout>

        <TextView
            android:id="@+id/order_summary_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:textAllCaps="true"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/price_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"

            android:textColor="#000000"
            android:textSize="16sp" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:onClick="submitOrder"
            android:text="@string/order"
            android:textAllCaps="true" />


    </LinearLayout>
</ScrollView>
</RelativeLayout>